Bug 59224 - [IVB Bisected]cairo-trace (benchmark)chromium-tabs.trace case failed
Summary: [IVB Bisected]cairo-trace (benchmark)chromium-tabs.trace case failed
Status: CLOSED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: xlib backend (show other bugs)
Version: 1.12.8
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Chris Wilson
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-11 01:51 UTC by ye.tian
Modified: 2015-05-20 01:25 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
chromium-tabs.trace (897.13 KB, text/plain)
2013-01-14 02:35 UTC, ye.tian
Details

Description ye.tian 2013-01-11 01:51:10 UTC
System Environment:       
----------------------------------------------
Platform:IVB
Mesa:  (9.0)9a07b6bd747e776aa55029e18ab11d3b8569ee61
Cairo: (master)1bcd59ef4c9dceaefa51ec6db1f5240d75940724
Kernel:(drm-intel-fixes)29d86ebd2210ced26c4f219c21d6569df90dcabf

Bug detailed description:
----------------------------------------------
Many cairo-trace fail on IVB.
It's cairo regression. By bisected, show that 146da77d85b304651949a819bc8 is the first bad commit.

commit 146da77d85b304651949a819bc8b0a74819f0416
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Jan 8 12:19:33 2013 +0000

    script: Attempt to decompress images in place

error out
------------------
[  0]      xcb   chromium-tabs Error during replay, line 47: error while reading from input stream
[  0]     xlib   chromium-tabs Error during replay, line 47: error while reading from input stream

Some cairo-trace failed case list:
(benchmark)chromium-tabs.trace
(benchmark)evolution.trace
(benchmark)firefox-asteroids.trace
(benchmark)firefox-canvas-alpha.trace
(benchmark)midori-zoomed.trace
(full)epiphany-20090810.trace
(full)epiphany-webkit-20090810.trace
(full)firefox-chalkboard-tiled.trace
(full)firefox-woodtv.trace
(full)gnome-system-monitor-20090821.trace
...

Reproduce steps:
---------------------------------------------
1, xinit&
2, vblank_mode=0 CAIRO_TEST_TARGET=xlib ./cairo-perf-trace ../benchmark/chromium-tabs.trace
Comment 1 Chris Wilson 2013-01-11 09:07:49 UTC
Can you attach the chromium-tabs.trace triggering the error? Then do a 'make clean && make' in your traces directory after installing the updated cairo.
Comment 2 ye.tian 2013-01-14 02:32:31 UTC
(In reply to comment #1)
> Can you attach the chromium-tabs.trace triggering the error? Then do a 'make
> clean && make' in your traces directory after installing the updated cairo.

Yes, please find the attachment. The issue still exists after 'make clean && make'. The cairo-trace commit is cdb266e660743e680314ef4b0c4655a311f32ca4.
Comment 3 ye.tian 2013-01-14 02:35:47 UTC
Created attachment 72976 [details]
chromium-tabs.trace
Comment 4 Chris Wilson 2013-01-14 03:30:02 UTC
commit 768b81b78eabbebb1bb443355441cac567739035
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Jan 14 03:27:11 2013 +0000

    script: Set decompression length prior to calling decompressors
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=59224
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 5 meng 2013-01-14 09:00:47 UTC
Verified with the above cairo commit.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.